added web monitization tag

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+    <meta name="monetization" content="$coil.xrptipbot.com/B6BW9YpKR22WWbQOJ4GsPg">
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <!-- <script src="https://js13kgames.com/webxr-src/aframe.js"></script> -->
     <title>Back2Space</title>
     <script src="main.js"></script>
 </head>
