--- a/src/static/index.html
+++ b/src/static/index.html
@@ -15,7 +15,7 @@
         <a-entity>
             <a-plane sun position="0 100 -430" scale="230 230 230"></a-plane>
         </a-entity>
-        <a-entity id='titlescreen' visible="false">
+        <a-entity id='titlescreen'>
             <a-plane titlescreen position="0 0 -2" scale="4 4 4" rotation="-14.5 0 0"></a-plane>
             <a-plane neontext="text:Press fire to start" position="0 .64 -1.9" scale="2 2 2"></a-plane>
         </a-entity>
