changed removed 'roughness' on ground material

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -43,7 +43,8 @@
             </a-entity>
             <a-entity mountains wireframe-material="color:#497cdf" position="0 -1 0"></a-entity>
             <a-plane position="0 0 0" 
-            material="src: #wireframe-texture; repeat: 500 500"
+            material="src: #wireframe-texture; repeat: 500 500;roughness:0"
+            
             rotation="-90 0 0" width="500" height="500" color="#df497c"></a-plane>
         </a-entity>
         <a-sky space>
