--- a/src/static/index.html
+++ b/src/static/index.html
@@ -33,27 +33,38 @@
             <a-asset-song></a-asset-song>
             <img src="Textures/wireframe01.jpg" id="wireframe-texture" />
             <img src="Textures/invader-icon.png" id="invader-texture" />
+            <img src="Textures/Title.png" id="title-texture" />
+            <img src="Textures/GameOver.png" id="gameover-texture" />
+            <img src="Textures/PressFire.png" id="pressfire-texture" />
+            <img src="Textures/PressFireRestart.png" id="pressfirerestart-texture" />
         </a-assets>
+
         <a-entity>
             <a-plane sun position="0 100 -430" scale="230 230 230"></a-plane>
         </a-entity>
-        <a-entity id='titlescreen'>
-            <a-plane titlescreen position="0 0 -2" scale="4 4 4" rotation="-14.5 0 0"></a-plane>
-            <a-plane neontext="text:Press fire to start" position="0 .64 -1.9" scale="2 2 2"></a-plane>            
+
+        <a-entity id='titlescreen' visible="true">
+            <a-plane class='clickable' material="src: #title-texture;roughness:1;transparent: true;" position="0 1.7 -2.2" scale="4 1 4"
+                rotation="-14.5 0 0"></a-plane>
+            <a-plane class='clickable' material="src: #pressfire-texture;roughness:1;transparent: true;" position="0 1.5 -1.9"
+                scale="2 .5 2"></a-plane>
         </a-entity>
 
-        <a-entity id="ad" visible="true" position="0 0.37285 -2.55974" scale="0.5 0.5 0.5" rotation="-14.500000000000002 0 0">
-            <a-entity 
+        <a-entity id="ad" visible="true" position="0 0.37285 -2.55974" scale="0.5 0.5 0.5"
+            rotation="-14.500000000000002 0 0">
+            <a-entity
                 zesty-ad="space: 40; creator: 0x247332f68a529ab11a65d665cf84ca376a24688a; adFormat: wide; network: matic; format: wide">
             </a-entity>
         </a-entity>
 
         <a-entity id='gameoverscreen' visible="false">
-            <a-plane titlescreen="text:Game Over" position="0 -.25 -2" scale="5 5 5" rotation="-14.5 0 0"></a-plane>
-            <a-plane neontext="text:Press fire to restart;fontsize:125" position="0 .30 -1.9" scale="3 3 3"></a-plane>
-            <a-plane id="score" neontext="text:312 invaders shot;fontsize:60;color:#1b90e2" position="0 .05 -1.6"
+            <a-plane class='clickable' material="src: #gameover-texture;roughness:1;transparent: true;" position="0 1.8 -2.2"
+                scale="5 1.333 5" rotation="-14.5 0 0"></a-plane>
+            <a-plane class='clickable' material="src: #pressfirerestart-texture;roughness:1;transparent: true;" position="0 1.5 -1.9"
+                scale="4 1 4"></a-plane>
+            <a-plane class='clickable' id="score" neontext="text:312 invaders shot;fontsize:60;color:#1b90e2" position="0 .05 -1.6"
                 scale="3 3 3"></a-plane>
-           
+
         </a-entity>
 
         <a-entity game>
@@ -79,10 +90,15 @@
         </a-entity>
         <a-sky space>
         </a-sky>
-        <a-entity shoot-controls="hand:right">
+
+        <a-entity shoot-controls="hand:right" laser-controls>
             <a-entity gun wireframe-material="color:#FF0" visible="false"> </a-entity>
         </a-entity>
-        <a-entity camera position="0 1.6 0" rotation="0 0 0" look-controls="pointerLockEnabled:true">
+
+        <a-entity  
+            raycaster="objects: .clickable" 
+            camera position="0 1.6 0" rotation="0 0 0"
+            look-controls="pointerLockEnabled:true">
             <a-entity id="hud" scale="0.05 0.05 0.05" position="0 -0.24 -0.4" rotation="-25 0 0">
                 <a-plane position="-1.19952 0.51127 0.22539"
                     material="src: #invader-texture;roughness:1;transparent: true;depthTest: false; depthWrite: false">
@@ -90,6 +106,15 @@
                 <a-plane id="hud-score" neontext="text:0;fontsize:125" position="0 -2.850 0" scale="8 8 8"></a-plane>
             </a-entity>
             <a-entity id="missile-spawner"></a-entity>
+            <!-- cursor="rayOrigin:mouse"  -->
+            <a-entity  
+  cursor
+  visible="false"
+  material="color: magenta; shader: flat"
+  position="0 0 -.2"
+  scale="0.003 0.003 0.003"
+  geometry="primitive: ring"></a-entity>
+        </a-entity>
         </a-entity>
     </a-scene>
 </body>
