Fixed ad and gameover screen in VR

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -62,7 +62,7 @@
                 scale="5 1.333 5" rotation="-14.5 0 0"></a-plane>
             <a-plane class='clickable' material="src: #pressfirerestart-texture;roughness:1;transparent: true;" position="0 1.5 -1.9"
                 scale="4 1 4"></a-plane>
-            <a-plane class='clickable' id="score" neontext="text:312 invaders shot;fontsize:60;color:#1b90e2" position="0 .05 -1.6"
+            <a-plane id="score" neontext="text:312 invaders shot;fontsize:60;color:#1b90e2" position="0 .05 -1.6"
                 scale="3 3 3"></a-plane>
 
         </a-entity>
