--- a/src/static/index.html
+++ b/src/static/index.html
@@ -67,6 +67,9 @@
 
         </a-entity>
 
+        <a-entity id="leaderboard" position="2.533 1.8 0" rotation="0 -90 0" 
+ca-leaderboard="debug: true; leaderboardId: back-to-space; title: The best defenders; fontSrc: https://cdn.aframe.io/fonts/mozillavr.fnt; textWidth: 3; verticalSpacing: 110; horizontalSpacing: -0.5; textColor:#ff0;textColor2:#ff0;textColor3:#ff0;textColor4:#497cdf"></a-entity>
+
         <a-entity game>
             <a-entity id="invaders">
             </a-entity>
