--- a/src/static/index.html
+++ b/src/static/index.html
@@ -44,10 +44,10 @@
         </a-entity>
 
         <a-entity id='titlescreen' visible="true">
-            <a-plane class='clickable' material="src: #title-texture;roughness:1;transparent: true;" position="0 1.7 -2.2" scale="4 1 4"
-                rotation="-14.5 0 0"></a-plane>
-            <a-plane class='clickable' material="src: #pressfire-texture;roughness:1;transparent: true;" position="0 1.5 -1.9"
-                scale="2 .5 2"></a-plane>
+            <a-plane class='clickable' material="src: #title-texture;roughness:1;transparent: true;"
+                position="0 1.7 -2.2" scale="4 1 4" rotation="-14.5 0 0"></a-plane>
+            <a-plane class='clickable' material="src: #pressfire-texture;roughness:1;transparent: true;"
+                position="0 1.5 -1.9" scale="2 .5 2"></a-plane>
         </a-entity>
 
         <a-entity id="ad" visible="true" position="0 0.37285 -2.55974" scale="0.5 0.5 0.5"
@@ -58,17 +58,18 @@
         </a-entity>
 
         <a-entity id='gameoverscreen' visible="false">
-            <a-plane class='clickable' material="src: #gameover-texture;roughness:1;transparent: true;" position="0 1.8 -2.2"
-                scale="5 1.333 5" rotation="-14.5 0 0"></a-plane>
-            <a-plane class='clickable' material="src: #pressfirerestart-texture;roughness:1;transparent: true;" position="0 1.5 -1.9"
-                scale="4 1 4"></a-plane>
+            <a-plane class='clickable' material="src: #gameover-texture;roughness:1;transparent: true;"
+                position="0 1.8 -2.2" scale="5 1.333 5" rotation="-14.5 0 0"></a-plane>
+            <a-plane class='clickable' material="src: #pressfirerestart-texture;roughness:1;transparent: true;"
+                position="0 1.5 -1.9" scale="4 1 4"></a-plane>
             <a-plane id="score" neontext="text:312 invaders shot;fontsize:60;color:#1b90e2" position="0 .05 -1.6"
                 scale="3 3 3"></a-plane>
 
         </a-entity>
 
-        <a-entity id="leaderboard" position="2.533 1.8 0" rotation="0 -90 0" 
-ca-leaderboard="debug: true; leaderboardId: back-to-space; title: The best defenders; fontSrc: https://cdn.aframe.io/fonts/mozillavr.fnt; textWidth: 3; verticalSpacing: 110; horizontalSpacing: -0.5; textColor:#ff0;textColor2:#ff0;textColor3:#ff0;textColor4:#497cdf"></a-entity>
+        <a-entity id="leaderboard" position="2.533 1.8 0" rotation="0 -90 0"
+            ca-leaderboard="debug: true; leaderboardId: back-to-space; title: The best defenders; fontSrc: https://cdn.aframe.io/fonts/mozillavr.fnt; textWidth: 3; verticalSpacing: 110; horizontalSpacing: -0.5; textColor:#ff0;textColor2:#ff0;textColor3:#ff0;textColor4:#497cdf">
+        </a-entity>
 
         <a-entity game>
             <a-entity id="invaders">
@@ -95,13 +96,11 @@ ca-leaderboard="debug: true; leaderboardId: back-to-space; title: The best defen
         </a-sky>
 
         <a-entity shoot-controls="hand:right">
-            <a-entity id="gunray" raycaster="objects:.clickable;showLine:true;lineColor: red; lineOpacity: 0.5"></a-entity>
+            <a-entity id="gunray" raycaster="objects:.clickable;showLine:true" position="0 .1 0"></a-entity>
             <a-entity gun wireframe-material="color:#FF0" visible="false"> </a-entity>
         </a-entity>
 
-        <a-entity   
-            raycaster="objects: .clickable" 
-            camera position="0 1.6 0" rotation="0 0 0"
+        <a-entity raycaster="objects: .clickable" camera position="0 1.6 0" rotation="0 0 0"
             look-controls="pointerLockEnabled:true">
             <a-entity id="hud" scale="0.05 0.05 0.05" position="0 -0.24 -0.4" rotation="-25 0 0">
                 <a-plane position="-1.19952 0.51127 0.22539"
@@ -111,13 +110,8 @@ ca-leaderboard="debug: true; leaderboardId: back-to-space; title: The best defen
             </a-entity>
             <a-entity id="missile-spawner"></a-entity>
             <!-- cursor="rayOrigin:mouse"  -->
-            <a-entity  
-  cursor
-  visible="false"
-  material="color: magenta; shader: flat"
-  position="0 0 -.2"
-  scale="0.003 0.003 0.003"
-  geometry="primitive: ring"></a-entity>
+            <a-entity cursor visible="false" material="color: magenta; shader: flat" position="0 0 -.2"
+                scale="0.003 0.003 0.003" geometry="primitive: ring"></a-entity>
         </a-entity>
         </a-entity>
     </a-scene>
