Enabled Zesty beacons

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -52,7 +52,7 @@
         <a-entity id="ad" visible="true" position="0 0.37285 -2.55974" scale="0.5 0.5 0.5"
             rotation="-14.500000000000002 0 0">
             <a-entity
-                zesty-ad="space: 40; creator: 0x247332f68a529ab11a65d665cf84ca376a24688a; adFormat: wide; network: matic; format: wide">
+                zesty-ad="space: 40; creator: 0x247332f68a529ab11a65d665cf84ca376a24688a; adFormat: wide; network: matic; format: wide;beacon: true">
             </a-entity>
         </a-entity>
 
