--- a/src/static/index.html
+++ b/src/static/index.html
@@ -22,7 +22,7 @@
     <meta name="theme-color" content="#ff00ff">
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <!-- <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script> -->
-    <script src="https://ipfs.io/ipns/lib.zesty.market/zesty-aframe-sdk.js"></script>
+    <script src="https://ipfs.io/ipns/libv2.zesty.market/zesty-aframe-sdk.js"></script>
     <title>Back2Space</title>
     <script src="main.js"></script>
 </head>
@@ -51,9 +51,7 @@
 
         <a-entity id="ad" visible="true" position="0 0.37285 -2.55974" scale="0.5 0.5 0.5"
             rotation="-14.500000000000002 0 0">
-            <a-entity
-                zesty-ad="space: 40; creator: 0x247332f68a529ab11a65d665cf84ca376a24688a; adFormat: wide; network: matic; format: wide;beacon: true">
-            </a-entity>
+                <a-entity visible="true" zesty-banner="adUnit: f8ddbf81-d035-4112-b31b-88f29f40b691; adFormat: wide; format: wide;beacon: true"></a-entity>
         </a-entity>
 
         <a-entity id='gameoverscreen' visible="false">
