Disabled HeyVR Sandbox

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             }
         </style>
 
-        <script src="latest.sandbox.js"></script>
+        <!-- <script src="latest.sandbox.js"></script> -->
 
         {{ if settings.runtime.pwa.enable }}
         <link rel="manifest" href="manifest.json" />
