--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             async
             src="https://www.googletagmanager.com/gtag/js?id={{ settings.runtime.googleAnalytics }}"
         ></script>
-        <script>
+        <script type="wonderland/script">
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
